; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_trivial.c_test_merge_workdir_trivial__5alt_1.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_trivial.c_test_merge_workdir_trivial__5alt_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"trivial-5alt-1\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"trivial-5alt-1-branch\00", align 1
@repo_index = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [17 x i8] c"new-and-same.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_workdir_trivial__5alt_1() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @merge_trivial(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load i32, i32* @repo_index, align 4
  %5 = call i32* @git_index_get_bypath(i32 %4, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32 0)
  store i32* %5, i32** %1, align 8
  %6 = ptrtoint i32* %5 to i32
  %7 = call i32 @cl_assert(i32 %6)
  %8 = load i32, i32* @repo_index, align 4
  %9 = call i64 @git_index_reuc_entrycount(i32 %8)
  %10 = icmp eq i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @cl_assert(i32 %11)
  %13 = call i64 (...) @merge_trivial_conflict_entrycount()
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @cl_assert(i32 %15)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @merge_trivial(i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32* @git_index_get_bypath(i32, i8*, i32) #1

declare dso_local i64 @git_index_reuc_entrycount(i32) #1

declare dso_local i64 @merge_trivial_conflict_entrycount(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
